--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "node": ">=18"
   },
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "NODE_ENV=test vitest run",
+    "test:watch": "NODE_ENV=test vitest",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -30,7 +30,7 @@
     "globals": "^16.5.0",
     "nodemon": "^3.1.11",
     "supertest": "^7.0.0",
-    "vitest": "^4.0.13"
+    "vitest": "^1.5.2"
   },
   "vitest": {
     "coverage": {
